c4prj2_input/grade.txt
Grading at Wed May 22 17:00:01 UTC 2019
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c:3:19: error: missing terminating > character
input.c:43:50: error: unknown type name ‘furure_cards_t’
 deck_t ** read_input(FILE * f, size_t * n_hands, furure_cards_t * fc){
                                                  ^
Compilation of input.c failed

Overall Grade: F
